metacatui/src/main/webapp/js/themes/default/css/metacatui.css
/* Import font families */
@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
/* Oswald weights:
Light 300
Normal 400
Bold 700
*/
@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic);
/* Source Sans Pro weights:
Light 300
Normal 400
Normal italic 400
Semi-bold 600
Bold 700
*/

/* Body CSS
-------------------------------------------------- */
    html {
    	margin: 0;
    	padding: 0;
    	height: 100%;
    }
    
    body {
      color: #333333;
      font: 400 15px/20px "Source Sans Pro", "Helvetica Nueue", "Helvetica", "sans serif";
      min-height: 100%;
      position: relative;
    }
    
	h3 {
		font: 400 24.5px/40px "Source Sans Pro", sans-serif;
	}
	
	h2{
		font: 400 27.5px/40px "Oswald", sans-serif;
	}
	
    
    article, aside, figure, footer, header, hgroup, menu, nav, section { 
      display:block;   
    }

        
    body > #Content {
    	position: relative;
    	margin: 40px auto auto auto;
    	width: 1170px;
    	padding-bottom: 360px; /* height + vertical padding + vertical margins of footer */
    }
		
    body > section > article {
      background-color: #FFFFFF; /* Fallback for IE8 and earlier, will be solid white */
      background-color: rgba(255, 255, 255, 0.8);
      padding: 20px;
      border-radius: 20px;
      border-radius: 20px;		
      -webkit-border-radius: 20px;
	  -moz-border-radius: 20px;			
    }
    
     .container{
    	width: 100%;
    }
    
    h1 > a[name], h2 > a[name], h3 > a[name],
    h4 > a[name], h5 > a[name], h6 > a[name] {
      color: #555555;
      text-decoration: none;
      z-index: 20; /*keeps hidden anchor tags from blocking content*/
    }
    
    /* make sure the anchors render with padding-top */
    h1 > a[name]:before, h2 > a[name]:before, h3 > a[name]:before,
    h4 > a[name]:before, h5 > a[name]:before, h6 > a[name]:before {
		content: "";
    padding-top: 115px;
    }
    
    a {
      color: #166194;
    }
    
    a:hover{
    	color: #3399CC;
    	text-decoration: none;
    }
    
    ul, ol{
    	margin: 0px;
    }
    
    ul.indent > li{
    	margin-left: 15px;
    }
    
    ul.plain-list > li{
    	line-height: 25px;
    	list-style: none;
    }
   
    
    .clear{
    	clear: both;
    }
    
    
    div.row-fluid > a[name] {
      margin: 35px auto auto auto;
    }
    
    h2#pagehead{
    	font: 400 31px/31px "Oswald" Arial sans-serif;
    }
     
    /* For full-screen background image */
	img.bg{
		min-height: 100%;
		min-width: 1024px;
		width: 100%;
		height: auto;
		position: fixed;
		top: 0;
		left: 0;
		z-index: -1; /* So that right-clicking on background image will behave like right-clicking on background */
		
	}
	
	@media screen and (max-width: 1024px) {
	  img.bg {
	    left: 50%;
	    margin-left: -512px;   /* 50% */
	  }
	}

    
/* FORM/INPUT CUSTOMIZATIONS
-------------------------------------------------- */ 
	.controls-well {
	    padding: 4px;
	    background: rgba(255, 255, 255, 0.3);
	}
	.control-label {
		cursor: default;
	}
	
	select{
    	font: 300 16px/16px "Oswald", Arial, sans-serif;
    }
	
	
	#results-header select{
		border: 0;
		border-radius: 0;
		-webkit-border-radius: 0px;
		-moz-border-radius: 0px;
		-webkit-appearance: none;
		background: none;
		width: 120px;
		-moz-appearance: none;
		appearance: none;
		/*To hide the drop-down arrow in Firefox */
		text-indent: 0.01px;
		text-overflow: '';
	}
	
	#results-header .select > i{
		margin-right: -110px;
	}
	

/* CUSTOMIZE THE ACCORDIAN 
-------------------------------------------------- */
.accordion-heading a.accordion-toggle {
	display: inline-block; 
} 

/* SHARE/UPLOAD, AND LOGIN FEATURES 
* Choose to hide these features
* -----------------------------------------------------*/
.share-feature{
	/* display: none; */ 
}

/* NOTIFICATION AREA CSS
 * -------------------------------------------------- */    
  section#Notification {
    position: fixed;
    top: 105px;
    height: 40px;
    width: inherit;
    max-height: 40px;
    min-height: 40px;
  }
  
  .progress-striped{
  	border-radius: 0px;
  	-webkit-border-radius: 0px;
	-moz-border-radius: 0px;
  }
  
  .progress-striped .bar{
  	background-color: #166194;
  }

  
/* FOOTER CSS
-------------------------------------------------- */    

    footer#Footer {
      position: absolute;
      bottom: 0px;
      margin-top: 40px;
      background: rgba(0, 0, 0, 0.8);
      padding: 20px 0px;
      height: 280px;
      width: 100%;
      color: #FFFFFF;
    }
    
    footer#Footer > .logos{
    	width: 450px;
    	margin: 20px auto;
    }
    
    footer#Footer > .logos > div{
    	height: 100px; 	
    }
    
    footer#Footer > .logos > div > a{
    	line-height: 100px; 	
    }
    
    footer#Footer > .logos > div > a > img{
    	float:right;
    }
    
    footer#Footer > .logos > div > a > img:hover{
    	opacity: 1;
    }
    
    footer#Footer > .logos img.small-logo{
    	height: 25%;
    	width: auto;
    }
    
    footer#Footer > .logos img.small-logo:last-child{
    	float:left;
    }
    
    
    footer#Footer > .logos img.short-logo{
    	margin-top: 20%;
    }
    
    footer#Footer > .logos 
	
	footer#Footer > div:last-child{
		text-align: center;
		color: #999999;
	}

    footer#Footer h2 {
      font: 300 25px/25px "Oswald", Arial, sans-serif;
      color: #FDFDFD;
      padding: 0;
      line-height: 48px;
    }
    
    footer#Footer ul.helpitems {
      list-style: none;
    }
    
    footer#Footer ul.helpitems li {
      font: 400 15px/15px "Source Sans Pro", Arial, sans-serif;
      vertical-align: baseline;
      margin: 15px 0px 0px 0px;                 
    }
    
    ul.helpitems a {
      color: #FDFDFD;     
    }
    
    ul.helpitems a:hover{
    	color: #3399CC;
    	text-decoration: none; 
    }
    

    footer#Footer img {
      opacity: .75;
    }
/* ... */

